# tinygrad.c

./: CMakeLists.txt  README.md
backends/cpu/: README.md
backends/cuda/: README.md
backends/hip/: README.md
backends/metal/: README.md
backends/vulkan/: README.md
backends/webgpu/: README.md
examples/: resnet18_cpu.c
generators/manifest/: README.md  gen_manifest.py
include/: tg.h  tg_backend.h
reference/: init_tinygrad.sh
src/codegen/: devectorizer.c  devectorizer.h  expander.c  expander.h  gpudims.c  gpudims.h  linearize.c  linearize.h  lowerer.c  lowerer.h  quantize.c  quantize.h
src/codegen/opt/: heuristic.c  heuristic.h  kernel.c  kernel.h  search.c  search.h  swizzler.c  swizzler.h  tc.c  tc.h
src/device/: device.c  device.h
src/dtype/: dtype.c  dtype.h
src/engine/: autograd.c  autograd.h  graph.c  graph.h
src/frontend/: onnx.c  onnx.h  torch.c  torch.h
src/helpers/: helpers.c  helpers.h
src/nn/: datasets.c  datasets.h  layers.c  layers.h  optim.c  optim.h  sgd.c  state.c  state.h
src/renderer/: cstyle.c  cstyle.h  llvmir.c  llvmir.h  ptx.c  ptx.h  wgsl.c  wgsl.h
src/runtime/graph/: cuda.c  cuda.h  graph.c  graph.h  hcq.c  hcq.h  metal.c  metal.h  remote.c  remote.h
src/runtime/ops_cpu/: ops.c  ops.h
src/runtime/ops_cpu/kernels/: batchnorm.c  conv_im2col.c  linear.c  logsoftmax_nll.c  pool.c  reduce.c  relu.c
src/schedule/: grouper.c  grouper.h  kernelize.c  kernelize.h  multi.c  multi.h
src/shape/: shapetracker.c  shapetracker.h  view.c  view.h
src/tensor/: tensor.c  tensor.h
src/uop/: mathtraits.c  mathtraits.h  ops.c  ops.h  optional.c  optional.h  spec.c  spec.h  symbolic.c  symbolic.h  transcendental.c  transcendental.h  upat.c  upat.h
tests/: test_ops.c  test_resnet18.c  test_tensor.c
